--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,22 +1,33 @@
-<form method="POST" action="/new">
-  <h1>New form</h1>
-  <label for="">
-    <input
-      type="text"
-      name="messageUser"
-      id="messageUser"
-      placeholder="john doe"
-    />
-  </label>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title><% title %></title>
+    <link rel="stylesheet" href="/public/css/styles.css" />
+  </head>
+  <body>
+    <form method="POST" action="/new">
+      <h1>New form</h1>
+      <label for="">
+        <input
+          type="text"
+          name="messageUser"
+          id="messageUser"
+          placeholder="john doe"
+        />
+      </label>
 
-  <label for="">
-    <input
-      type="text"
-      name="messageText"
-      id="messageText"
-      placeholder="message"
-    />
-  </label>
-  <button type="submit">Submit</button>
-</form>
-<a href="/">Back</a>
+      <label for="">
+        <input
+          type="text"
+          name="messageText"
+          id="messageText"
+          placeholder="message"
+        />
+      </label>
+      <button type="submit">Submit</button>
+    </form>
+    <a href="/">Back</a>
+  </body>
+</html>
